<resources>
    <string name="app_name">Order Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_no">Order No. </string>
    <string name="product_name">Product Name: </string>
    <string name="quantity">Quantity: </string>
    <string name="add_image">Add Image</string>
    <string name="submit">Submit</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="login">LogIn</string>
    <string name="delivery_date">Delivery Date: </string>
    <string name="order_delivery_man">Order Delivery Man: </string>
    <string name="password">Password</string>
    <string name="type_your_message">Type your message</string>
    <string name="user_name">User Name</string>
    <string name="message">Message</string>
    <string name="message_time">message time</string>
    <string name="sign_out">Sign Out</string>
    <string name="delivery_man">Delivery Man: </string>
    <string name="order_received">Received</string>
    <string name="employee_name">Employee Name</string>
</resources>