<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="order"
            type="com.example.ordermanager.model.Order" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        android:layout_margin="8dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <ImageView
                android:id="@+id/productImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                app:setImageUrl="@{order.orderImage}"
                android:src="@drawable/wordpress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/orderNoTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_no"
                app:layout_constraintEnd_toStartOf="@+id/orderNo"
                app:layout_constraintTop_toTopOf="@+id/productImage" />
            <TextView
                android:id="@+id/orderNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@{order.orderNo}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/productImage" />

            <TextView
                android:id="@+id/productNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/product_name"
                app:layout_constraintStart_toEndOf="@+id/productImage"
                app:layout_constraintTop_toBottomOf="@+id/orderNo" />

            <TextView
                android:id="@+id/productName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{order.productName}"
                app:layout_constraintStart_toEndOf="@+id/productNameTV"
                app:layout_constraintTop_toBottomOf="@+id/orderNo" />

            <TextView
                android:id="@+id/quantityTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/quantity"
                app:layout_constraintStart_toStartOf="@+id/productNameTV"
                app:layout_constraintTop_toBottomOf="@+id/productName" />
            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{order.quantity}"
                app:layout_constraintStart_toStartOf="@+id/productName"
                app:layout_constraintTop_toBottomOf="@+id/productName" />

            <TextView
                android:id="@+id/deliveryTimeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/delivery_date"
                app:layout_constraintStart_toStartOf="@+id/quantityTV"
                app:layout_constraintTop_toBottomOf="@+id/quantity" />
            <TextView
                android:id="@+id/deliveryTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{order.deliveryDate}"
                app:layout_constraintStart_toStartOf="@+id/quantity"
                app:layout_constraintTop_toBottomOf="@+id/quantity" />


            <TextView
                android:id="@+id/deliveryMan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/delivery_man"
                app:layout_constraintStart_toStartOf="@+id/quantityTV"
                app:layout_constraintTop_toBottomOf="@+id/deliveryTimeTV" />

            <TextView
                android:id="@+id/deliveryManName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{order.deliveryMan}"
                tools:text="Delivery By"
                app:layout_constraintStart_toStartOf="@+id/quantity"
                app:layout_constraintTop_toBottomOf="@+id/deliveryTime" />

            <ImageView
                android:id="@+id/editItemIV"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/edit_item"
                app:layout_constraintBottom_toTopOf="@+id/deliveryManName"
                app:layout_constraintEnd_toEndOf="@+id/orderNoTV"
                app:layout_constraintTop_toBottomOf="@+id/orderNoTV" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>